# pyo3

./: Dockerfile  README.md  requirements.txt
pyo3/: Cargo.toml  pyproject.toml
pyo3/src/: lib.rs
