[package]
name = "polars-speed-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_speed_test"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.34", features = ["lazy"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-polars = "0.8"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1
