[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "polars-speed-test"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "polars>=0.19",
    "pyarrow>=14.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]


[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-benchmark"
]